--- a/src/SCSS/layout/about.scss
+++ b/src/SCSS/layout/about.scss
@@ -22,21 +22,22 @@
       overflow: hidden;
       z-index: 1;
     }
+    @extend %yoda;
 
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('assets/imgs/yoda/yoda-background.png');
-      background-position: 100% 90%;
-      background-repeat: no-repeat;
-      background-size: 50%;
-      background-attachment: fixed;
-      z-index: 2;
-    }
+    // &::before {
+    //   content: '';
+    //   position: absolute;
+    //   top: 0;
+    //   left: 0;
+    //   width: 100%;
+    //   height: 100%;
+    //   background: url('assets/imgs/yoda/yoda-background.png');
+    //   background-position: 100% 90%;
+    //   background-repeat: no-repeat;
+    //   background-size: 50%;
+    //   background-attachment: fixed;
+    //   z-index: 2;
+    // }
 
     &::after {
       content: '';
