--- a/src/SCSS/layout/contact.scss
+++ b/src/SCSS/layout/contact.scss
@@ -7,20 +7,22 @@
   padding: 2rem 0;
   background: black;
 
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('assets/imgs/yoda/yoda-background.png');
-    background-position: 100% 90%;
-    background-repeat: no-repeat;
-    background-size: 50%;
-    background-attachment: fixed;
-    z-index: 2;
-  }
+  @extend %yoda;
+
+  // &::before {
+  //   content: '';
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   background: url('assets/imgs/yoda/yoda-background.png');
+  //   background-position: 100% 90%;
+  //   background-repeat: no-repeat;
+  //   background-size: 50%;
+  //   background-attachment: fixed;
+  //   z-index: 2;
+  // }
 
   &__title {
     text-align: center;
