--- a/src/SCSS/layout/header.scss
+++ b/src/SCSS/layout/header.scss
@@ -59,8 +59,8 @@
     text-transform: uppercase;
     border-bottom: solid $font-color 1px;
     margin-bottom: 1rem;
-    @extend %rainbow-text;
-    animation-duration: 5s;
+    // @extend %rainbow-text;
+    // animation-duration: 5s;
 
     // &:focus {
 
