--- a/src/SCSS/layout/hero.scss
+++ b/src/SCSS/layout/hero.scss
@@ -20,20 +20,22 @@
       z-index: 1;
     }
 
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('assets/imgs/yoda/yoda-background.png');
-      background-position: 100% 90%;
-      background-repeat: no-repeat;
-      background-size: 50%;
-      background-attachment: fixed;
-      z-index: 2;
-    }
+    @extend %yoda;
+
+    // &::before {
+    //   content: '';
+    //   position: absolute;
+    //   top: 0;
+    //   left: 0;
+    //   width: 100%;
+    //   height: 100%;
+    //   background: url('assets/imgs/yoda/yoda-background.png');
+    //   background-position: 100% 90%;
+    //   background-repeat: no-repeat;
+    //   background-size: 50%;
+    //   background-attachment: fixed;
+    //   z-index: 2;
+    // }
 
     &::after {
       content: '';
@@ -57,7 +59,12 @@
     position: relative;
     max-width: 80%;
     padding: 1rem;
+    box-shadow: turquoise -10px 10px 0px 0px;
     animation: retro-line infinite 3s;
+
+    @media (prefers-reduced-motion) {
+      animation: none;
+    }
     animation-timing-function: steps(5);
     // animation-delay: 3s;
   }
